code readability fixes, validator fixes

--- a/css/override.css
+++ b/css/override.css
@@ -79,3 +79,8 @@ body{
 {
     margin-right: 170px;
 }
+
+.body-text
+{
+    font: 14px sans-serif;
+}
